--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "@portal/wist",
   "version": "0.1.0",
   "description": "Websocket Tunneling",
-  "main": "index.js",
+  "entry": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "module"
 }
