--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "@portal/wist",
   "version": "0.1.0",
   "description": "Websocket Tunneling",
-  "entry": "index.js",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "typescript": "^5.8.2"
+  }
 }
