--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "wist"
 version = "0.1.0"
 edition = "2024"
-license = "ISC",
+license = "ISC"
 description = "Websocket Tunneling"
 
 [dependencies]
