--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,12 @@ license = "ISC"
 description = "Websocket Tunneling"
 
 [dependencies]
+async-trait = { version = "0.1.88", optional = true }
+either = { version = "1.15.0", default-features = false }
 itertools = { version = "0.14.0", default-features = false }
 whisk = "0.13.0"
+wisp-mux = { version = "5.1.0", optional = true }
+
+[features]
+async-trait = ["dep:async-trait"]
+wisp-mux = ["dep:wisp-mux","async-trait"]
