--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wist"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2024"
 license = "ISC"
 description = "Websocket Tunneling"
@@ -8,7 +8,9 @@ description = "Websocket Tunneling"
 [dependencies]
 async-trait = { version = "0.1.88", optional = true }
 either = { version = "1.15.0", default-features = false }
+futures = { version = "0.3.31", default-features = false }
 itertools = { version = "0.14.0", default-features = false }
+spin = "0.10.0"
 whisk = "0.13.0"
 wisp-mux = { version = "5.1.0", optional = true }
 
