--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@portal-solutions/wist",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Websocket Tunneling",
   "main": "index.js",
   "types": "index.d.ts",
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "type": "module",
-  "dependencies": {
-    "typescript": "^5.8.2"
+  "devDependencies": {
+    "typescript": "^5.8.3"
   }
 }
