--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Websocket Tunneling",
   "main": "./dist/index.cjs",
   "types": "./dist/index.d.cts",
-  "zshy": "index.ts",
+  "zshy": {
+    ".": "index.ts"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
